// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bold lex(**a
b**) 1`] = `
[
  Text {
    "content": "a
b",
    "literal": "a
b",
    "scope": "inline",
  },
]
`;

exports[`Bold lex(**a
b**) 2`] = `
"[b]a
b[/b]"
`;

exports[`Bold lex(**a*b**) 1`] = `
[
  Text {
    "content": "a*b",
    "literal": "a*b",
    "scope": "inline",
  },
]
`;

exports[`Bold lex(**a*b**) 2`] = `"[b]a*b[/b]"`;

exports[`Bold lex(**foo \\*\\* bar**) 1`] = `
[
  Text {
    "content": "foo \\*\\* bar",
    "literal": "foo \\*\\* bar",
    "scope": "inline",
  },
]
`;

exports[`Bold lex(**foo \\*\\* bar**) 2`] = `"[b]foo ** bar[/b]"`;

exports[`Bold lex(**foo** bar) 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;

exports[`Bold lex(**foo** bar) 2`] = `"[b]foo[/b]"`;

exports[`Bold lex(**foo**) 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;

exports[`Bold lex(**foo**) 2`] = `"[b]foo[/b]"`;
